# calculatoronsteroids

./: .clangd  CMakeLists.txt  result.txt  vcpkg.json
calculatoronsteroids/: CMakeLists.txt
calculatoronsteroids/src/: main.cpp
cmake/: config.cmake
res/: config.h.in
